install/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubernetes-hello-world
  name: kubernetes-hello-world
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: kubernetes-hello-world
  # To expose the service publicly
  #type: LoadBalancer
