install/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-hello-world
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - kubernetes-hello-world.appwavelets.com
  rules:
  - host: kubernetes-hello-world.appwavelets.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-hello-world
          servicePort: 80
